@@ -4,11 +4,12 @@ middleware/zeus-mysql:v1.0.0
 
 # Middleware
 middleware/middleware-controller:v1.2.9
-middleware/middlewarebackup-controller:v1.2.5
-middleware/backup-job-creator:v1.0.2
+middleware/middlewarebackup-controller:v1.2.7
+middleware/backup-job-creator:v1.0.3
 middleware/middleware-backup-operator:v1.0.3-common
-middleware/middleware-backup-operator:v1.0.4-pgsql
-middleware/middleware-backup-operator:v1.0.2-mysql
+middleware/middleware-backup-operator:v1.0.5-pgsql
+middleware/middleware-backup-operator:v1.0.3-mysql
+middleware/middleware-backup-operator:v1.0.2-mysql8
 middleware/kubectl:1.21
 
 #Minio
