@@ -1,5 +1,5 @@
 apiVersion: v1
-appVersion: 2.1.9
+appVersion: 2.2.0
 description: A Helm chart for harmonycloud middleware platform
 name: middleware
-version: 2.1.9
+version: 2.2.0
