@@ -134,10 +134,14 @@ spec:
         {{- if .Values.global.middlewarebackup_controller.job_creator.jobActiveDeadlineSeconds }}
         - --jobActiveDeadlineSeconds={{ .Values.global.middlewarebackup_controller.job_creator.jobActiveDeadlineSeconds }}
         {{- end }}
+        {{- if .Values.global.middlewarebackup_controller.job_creator.jobTolerations }}
+        - --tolerations={{ .Values.global.middlewarebackup_controller.job_creator.jobTolerations }}
+        {{- end }}
         - --job-creator-image={{ .Values.global.repository }}/{{ .Values.global.middlewarebackup_controller.job_creator.image }}:{{ .Values.global.middlewarebackup_controller.job_creator.tag }}
         - --backupJobImage={{ .Values.global.repository }}/{{ .Values.global.middlewarebackup_controller.common_path_backup.image }}:{{ .Values.global.middlewarebackup_controller.common_path_backup.tag }}
         - --job-pgsql-backup-image={{ .Values.global.repository }}/{{ .Values.global.middlewarebackup_controller.job_pgsql_backup.image }}:{{ .Values.global.middlewarebackup_controller.job_pgsql_backup.tag }}
         - --job-mysql-backup-image={{ .Values.global.repository }}/{{ .Values.global.middlewarebackup_controller.job_mysql_backup.image }}:{{ .Values.global.middlewarebackup_controller.job_mysql_backup.tag }}
+        - --job-mysql8-backup-image={{ .Values.global.repository }}/{{ .Values.global.middlewarebackup_controller.job_mysql_backup.image }}:{{ .Values.global.middlewarebackup_controller.job_mysql_backup.mysql8tag }}
         env:
         - name: CRD_GROUP
           value: "{{ .Values.global.crdGroup }}.cn"
