@@ -14,7 +14,7 @@ global:
     nodeSelector: {}
   middlewarebackup_controller:
     image: middlewarebackup-controller
-    tag: v1.2.5
+    tag: v1.2.7
     resources:
       limits:
         cpu: 200m
@@ -24,21 +24,23 @@ global:
         memory: 512Mi
     nodeSelector: {}
     job_creator:
-      jobNamespace: middleware-job
+      jobTolerations: harm.cn/type
+      jobNamespace: ""
       jobServiceAccount: job-creator
       # jobSecondsAfterFinished: 60
       # jobActiveDeadlineSeconds: 86400
       image: backup-job-creator
-      tag: v1.0.2
+      tag: v1.0.3
     common_path_backup:
       image: middleware-backup-operator
       tag: v1.0.3-common
     job_pgsql_backup:
       image: middleware-backup-operator
-      tag: v1.0.4-pgsql
+      tag: v1.0.5-pgsql
     job_mysql_backup:
       image: middleware-backup-operator
-      tag: v1.0.2-mysql
+      tag: v1.0.3-mysql
+      mysql8tag: v1.0.2-mysql8
   kubectl:
     installCRDs: true
     tag: 1.21
@@ -52,23 +54,8 @@ global:
     nodeSelector: {}
     tolerations: []
     affinity: {}
-podAntiAffinityTopologKey: "zone"
+
+podAntiAffinityTopologKey: "kubernetes.io/hostname"
+
 #取值[hard|soft] hard:强制反亲和 soft:非强制反亲和
 podAntiAffinity: "soft"
-tolerations:
-  - effect: NoSchedule
-    key: harm.cn/type
-    value: active-active
-  - effect: NoSchedule
-    key: harm.cn/system
-nodeAffinity:
-  preferredDuringSchedulingIgnoredDuringExecution:
-    - weight: 100
-      preference:
-        matchExpressions:
-          - key: system
-            operator: In
-            values:
-              - "true"
-imagePullSecrets:
-  - name: registrysecret
